Updated language folder from the original package

--- a/language/en-GB.plg_vmpayment_yaadpay.ini
+++ b/language/en-GB.plg_vmpayment_yaadpay.ini
@@ -7,8 +7,8 @@ YAADPAY_PAYMENT_NAME="Payment Name"
 YAADPAY_COST_PER_TRANSACTION="Cost per transaction"
 YAADPAY_COST_PERCENT_TOTAL="Cost per total"
 
-VMPAYMENT_YAADPAY_TERM_NO="Terminal number"
-VMPAYMENT_YAADPAY_TERM_NO_DESC="YAADPAY terminal number"
+VMPAYMENT_YAADPAY_TERM_NO="Terminal Name"
+VMPAYMENT_YAADPAY_TERM_NO_DESC="YAADPAY terminal name"
 VMPAYMENT_YAADPAY_LICENSE="License"
 VMPAYMENT_YAADPAY_LICENSE_DESC="License code as reveived from www.10bit.co.il"
 VMPAYMENT_YAADPAY_CUSTOMER_MESSAGE="Customer message"
@@ -18,17 +18,7 @@ VMPAYMENT_YAADPAY_ORDERSTATUS_APPROVED_DESC="Order status for success transactio
 VMPAYMENT_YAADPAY_ORDERSTATUS_DECLINED="Declined status"
 VMPAYMENT_YAADPAY_ORDERSTATUS_DECLINED_DESC="Order status for declined transaction"
 VMPAYMENT_YAADPAY_INVOICES="Allow Invoices"
-VMPAYMENT_YAADPAY_INVOICES_DESC="Allow Invoices in YaadPay"
-VMPAYMENT_YAADPAY_MAX_PAYMENTS="Max payments"
-VMPAYMENT_YAADPAY_MAX_PAYMENTS_DESC="Set the maximum allowed payments"
-VMPAYMENT_YAADPAY_TIERED_PAYMENTS="Tiered Payments"
-VMPAYMENT_YAADPAY_TIERED_PAYMENTS_DESC="Comma delimited values in the format of 10,20,30 => 1 payment up 2 10 , 2 payments up to 20 , 3 payments up to 30 , 4 payments above 30"
-VMPAYMENT_YAADPAY_POSTPONE="Postpone"
-VMPAYMENT_YAADPAY_POSTPONE_DESC="orders will be sent to YaadPay with postpone status"
-YAADPAY_AUTHORIZENET_ORDERSTATUS_APPROVED="סטטוס עסקה תקינה"
-YAADPAY_AUTHORIZENET_ORDERSTATUS_APPROVED_DESC="סטטוס עסקה תקינה"
-YAADPAY_AUTHORIZENET_ORDERSTATUS_DECLINED="סטטוס עסקה שנכשלה"
-YAADPAY_AUTHORIZENET_ORDERSTATUS_INVALID_DESC="סטטוס עסקה שנכשלה"
+VMPAYMENT_YAADPAY_INVOICES="Allow Invoices in YaadPay"
 
 
 VMPAYMENT_YAADPAY_REDIRECT_MESSAGE="Redirecting to Yaadpay Gateway, please wait..."
@@ -44,8 +34,4 @@ VMPAYMENT_YAADPAY_IFRAME_WIDTH	 = "Ifram Width"
 VMPAYMENT_YAADPAY_IFRAME_WIDTH_DESC	 = "Ifram Width"
 VMPAYMENT_YAADPAY_IFRAME_HEIGHT = "Iframe Height"
 VMPAYMENT_YAADPAY_IFRAME_HEIGHT_DESC = "Iframe Height"
-COM_VIRTUEMART_HEBREW="Hebrew"
-COM_VIRTUEMART_ENGLISH="English"
-COM_VIRTUEMART_AUTO="Auto"
-VMPAYMENT_YAADPAY_LANGUAGE="Language"
-VMPAYMENT_YAADPAY_LANGUAGE_DESC="Language"
+	
