--- a/language/en-GB/en-GB.plg_vmpayment_yaadpay.sys.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_yaadpay.sys.ini
@@ -3,5 +3,5 @@
 ; @Revision : $Revision$
 ; @author
 ; @package VMPayment
-; @subpackage VirtueMart payment Tranzila
+; @subpackage VirtueMart payment Yaadpay
 
