Added currency configuration

--- a/language/en-GB/en-GB.plg_vmpayment_yaadpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_yaadpay.ini
@@ -49,3 +49,5 @@ COM_VIRTUEMART_ENGLISH="English"
 COM_VIRTUEMART_AUTO="Auto"
 VMPAYMENT_YAADPAY_LANGUAGE="Language"
 VMPAYMENT_YAADPAY_LANGUAGE_DESC="Language"
+
+VMPAYMENT_YAADPAY_CURRENCY = "Currency"
